--- a/Command Line Interface/Janus/Janus/Janus.csproj
+++ b/Command Line Interface/Janus/Janus/Janus.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Janus.Plugins\Janus.Plugins.csproj" />
+  </ItemGroup>
+
 </Project>
