Implemented Diff algorithm to find delta of files

--- a/Command Line Interface/Janus/Janus/Janus.csproj
+++ b/Command Line Interface/Janus/Janus/Janus.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DiffPlex" Version="1.7.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Janus.Plugins\Janus.Plugins.csproj" />
   </ItemGroup>
 
