--- a/Backend/backend/appsettings.json
+++ b/Backend/backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Port=3306;Database=db;User=user;Password=password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
