Setup test case for Init Command

--- a/Command Line Interface/Janus/CLITests/CLITests.csproj
+++ b/Command Line Interface/Janus/CLITests/CLITests.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Janus\Janus.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
