--- a/fullstack/docker-compose.yml
+++ b/fullstack/docker-compose.yml
@@ -1,7 +1,16 @@
 ﻿version: '3.8'
 
 services:
- 
+
+ frontend:
+  container_name: frontend
+  image: nginx:latest
+  ports:
+    - "81:80"
+  volumes:
+    - ./frontend:/usr/share/nginx/html:ro
+
+
  backend:
   container_name: backend
   image: backend-backend
@@ -9,7 +18,7 @@ services:
    context: .
    dockerfile: Dockerfile
   ports:
-   - "8080:8080"
+   - "82:9000"
   depends_on:
    - db
   environment:
@@ -17,6 +26,7 @@ services:
       - ALLOWED_CORS_ORIGINS=http://192.168.1.100,http://organisation_network.local
   networks:
       - intranet
+
 
  db:
   container_name: db
@@ -28,7 +38,7 @@ services:
    MYSQL_PASSWORD: 'password'
    MYSQL_ROOT_PASSWORD: 'password'
   ports:
-   - '3906:3306'
+   - '83:3306'
   expose:
    - '3906'
   volumes:
