--- a/Fullstack/frontend/nginx.conf
+++ b/Fullstack/frontend/nginx.conf
@@ -1,13 +1,30 @@
+# HTTP server block: Redirect HTTP to HTTPS
 server {
-  listen 80;
-  
-  server_name localhost;
+    listen 80;
+    server_name localhost;
 
-  root /usr/share/nginx/html;
+    return 301 https://$host$request_uri;  # Redirect HTTP to HTTPS
+}
 
-  index index.html;
+# HTTPS server block
+server {
+    listen 443 ssl;
+    server_name localhost;
 
-  location / {
+    # SSL certificates
+    ssl_certificate /https/frontend-certificate.crt;
+    ssl_certificate_key /https/frontend-private-nopass.key;
+
+    # SSL settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers on;
+
+    # Root directory and client-side routing
+    root /usr/share/nginx/html;
     try_files $uri /index.html;  # Handle client-side routing
-  }
+
+    location / {
+        try_files $uri /index.html;  # Ensure client-side routing is handled here
+    }
 }
