Using Https & JWT tokens for CLI and frontend

--- a/Fullstack/frontend/nginx.conf
+++ b/Fullstack/frontend/nginx.conf
@@ -9,6 +9,7 @@ server {
 # HTTPS server block
 server {
     listen 443 ssl;
+    http2 on;
     server_name localhost;
 
     # SSL certificates
@@ -19,6 +20,7 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers on;
+
 
     # Root directory and client-side routing
     root /usr/share/nginx/html;
