--- a/Fullstack/frontend/package.json
+++ b/Fullstack/frontend/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@testing-library/react": "^16.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-router": "^7.1.1",
     "react-scripts": "^5.0.1"
