--- a/.github/workflows/CLI_Tests.yml
+++ b/.github/workflows/CLI_Tests.yml
@@ -12,7 +12,11 @@ on:
 jobs:
   CLI:
 
-    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
