User can now set profile pic

--- a/Fullstack/frontend/nginx.conf
+++ b/Fullstack/frontend/nginx.conf
@@ -29,4 +29,10 @@ server {
     location / {
         try_files $uri /index.html;  # Ensure client-side routing is handled here
     }
+
+    # Serve images from /app/public/images
+    location /images/ {
+        root /app/public;  # Path where images are stored inside the container
+        try_files $uri =404;  # If the file doesnt exist return 404
+    }
 }
