--- a/Command Line Interface/Janus/Janus/Janus.csproj
+++ b/Command Line Interface/Janus/Janus/Janus.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="DiffPlex" Version="1.7.2" />
     <PackageReference Include="Glob" Version="1.1.9" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.13" />
     <PackageReference Include="Microsoft.Net.Http.Headers" Version="8.0.13" />
   </ItemGroup>
