Fixed issue browser returning error on PP fallback

--- a/Fullstack/frontend/nginx.conf
+++ b/Fullstack/frontend/nginx.conf
@@ -33,6 +33,6 @@ server {
     # Serve images from /app/public/images
     location /images/ {
         root /app/public;  # Path where images are stored inside the container
-        try_files $uri =404;  # If the file doesnt exist return 404
+        try_files $uri /icons/account.svg;  # If the file doesnt exist return default image
     }
 }
