--- a/Fullstack/frontend/package.json
+++ b/Fullstack/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^14.5.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.1.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.14"
