--- a/Fullstack/frontend/package.json
+++ b/Fullstack/frontend/package.json
@@ -14,6 +14,7 @@
     "react-markdown": "^10.1.0",
     "react-router": "^7.1.1",
     "react-scripts": "^5.0.1",
+    "rehype-slug": "^6.0.0",
     "styled-components": "^6.1.14"
   },
   "scripts": {
